# HA-Companion-App

./: .gitignore  README.md  hacs.json
.claude/: settings.local.json
.github/workflows/: release.yml
custom_components/desktop_app/: __init__.py  manifest.json
desktop-app/: README.md  build-web.js  index.html  package-lock.json  package.json
desktop-app/src/: i18n.js  main.js  settings.js  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icons.ps1
desktop-app/src-tauri/src/: commands.rs  ha_client.rs  lib.rs  main.rs  registration.rs  settings.rs
desktop-app/src-tauri/src/sensors/: battery.rs  collector.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  system_info.rs
