[package]
name = "ha-companion"
version = "1.0.0"
description = "Home Assistant Desktop Companion App"
authors = ["HA Companion"]
edition = "2021"

[lib]
name = "ha_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "unstable"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
sysinfo = "0.32"
nvml-wrapper = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
battery = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
battery = "0.7"

[target.'cfg(windows)'.dependencies.battery]
version = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
